GNOME Bugzilla – Bug 773988
Regression: When opening multiple files, their order is reversed
Last modified: 2016-11-10 12:07:32 UTC
Downstream bug: https://bugs.archlinux.org/task/51461 How to reproduce: Select multiple files and open them with an application that cares about file order (for example audio files in a media player). Expected: Files are ordered as shown in nautilus Actual result: Order is reversed Reason: Caused by commit https://git.gnome.org/browse/nautilus/commit/?id=51dbfc977808b996aedf96b819766b8c982adc59 Specifically, it's the part where "file_to_activate" is now used instead of "files". "files_to_activate" is the negative! list from the "nautilus_file_list_filter" call above, and is in reverse order. Looking at file "nautilus-file.c", fuction "nautilus_file_list_filter": It creates both the positive and negative list in reverse order (for performance reasons according to the comment). The positive list is correctly reordered to make up for this, the negative list is not.
Created attachment 339178 [details] [review] file: create filtered file lists in correct order nautilus_file_list_filter() creates lists in the wrong order, causing files activation to occur in the same fashion. This is caused by double reversal of the file list when filtering files.
Review of attachment 339178 [details] [review]: oh right! thanks Ernestas!
Attachment 339178 [details] pushed as 87d4cbf - file: create filtered file lists in correct order