file: create filtered file lists in correct order

nautilus_file_list_filter() creates lists in the wrong order, causing
files activation to occur in the same fashion. This is caused by double
reversal of the file list when filtering files.

https://bugzilla.gnome.org/show_bug.cgi?id=773988